# wine-cellar

./: .gitignore  .vale.ini  CLAUDE.md  LICENSE  Makefile  README.md  mkdocs.yml
api/: .gitignore  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mts  vitest.config.ts  wrangler.toml
api/migrations/: 0001_initial.sql  0002_readings_source.sql  0003_activity_reading_link.sql  0004_multi_tenant.sql  0005_service_tokens.sql  0006_alerts_and_stages.sql  0007_winemaking_intelligence.sql  0008_passkey_auth.sql  0009_oauth_auth.sql  0010_api_keys.sql  0011_passkey_name.sql  0012_alert_type_check.sql  0013_add_missing_indexes.sql
api/scripts/: reset-e2e-db.sh  seed-e2e.sh
api/src/: app.py  app.ts  config.py  cron.ts  db-types.ts  db.py  index.ts  models.py  models.ts  schema.py  schema.ts
api/test/: access-jwt.test.ts  activities.test.ts  alert-manager.test.ts  alerts-api.test.ts  alerts.test.ts  api-keys.test.ts  auth-helpers.test.ts  auth-middleware.test.ts  auth.test.ts  batch-lifecycle.test.ts  batches.test.ts  cors.test.ts  cron.test.ts  devices.test.ts  env.d.ts  health.test.ts  helpers.ts  integration.test.ts  me.test.ts  push.test.ts  readings.test.ts  schema.test.ts  tenant-isolation.test.ts  webhook.test.ts  winemaking-alerts.test.ts  winemaking-cellaring.test.ts  winemaking-nudges.test.ts  winemaking-timeline.test.ts
api/tests/: conftest.py  test_activities.py  test_auth.py  test_batch_lifecycle.py  test_batches.py  test_db.py  test_devices.py  test_integration.py  test_models.py  test_readings.py  test_schema.py  test_webhook.py
(+196 files in other folders)
